# InvestInstruments

./: .gitignore  Dockerfile  README.md  T-Ivest.py  add_perspective_batch.py  add_perspective_exact.py  add_perspective_rest_exact.py  add_perspective_shares_only.py  add_perspective_tickers.py  backfill_all_prices.py  bonds_screen.xlsx  config.ini  consensus_data.xlsx  consensus_forecasts.csv  daily_history_job.py  dump_shares.py  export_potentials.py  forecasts.xlsx  full_refresh.ps1  full_refresh.py  full_summary.json  head_forecast.json  hello.py  import_share.py  inspect_db.py  list_favorites.py  list_shares.py  moex.py  moex_data.db  moex_data.xlsx  perspective_shares.xlsx  potentials_export.xlsx  project.db  promising_shares.xlsx  pyproject.toml  remove_perspective_batch.py  requirements.txt  revert_perspective_insert.py  run_full_refresh.bat  run_moex_batch.py  (+9 more)
.github/: copilot-instructions.md
GorbunovInvestInstruments/: __init__.py  async_api.py  auto_update.py  consensus_scheduler.py  data_forecasts.py  data_prices.py  exporting.py  main.py  moex_history_4_perspective_shares.py  moex_utils.py  potentials.py  scheduler.py
src/invest_core/: __init__.py  config_loader.py  consensus_fill.py  db.py  db_mysql.py  favorites.py  forecasts.py  hello.py  history.py  instruments.py  legacy_instruments.py  maintenance.py  moex_history.py  normalization.py  pipeline.py  potentials.py  prices.py  rest_instruments.py  sdk_client.py  (+4 more)
tests/: test_export_smoke.py  test_moex_utils.py  test_potentials_schema.py  test_prev_close.py  test_webapp.py
webapp/: __init__.py  app.py
(+2 files in other folders)
