[project]
name = "invest"
version = "0.1.0"
description = "Minimal invest project"
authors = [ { name = "Author", email = "author@example.com" } ]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "duckdb"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
